# jockey

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  build.py  jockey.py  pyproject.toml  requirements.txt  snapcraft.yaml  status_keeper.py
.chglog/: CHANGELOG.tpl.md  config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
docs/: .gitignore  Makefile  conf.py  index.md  index.rst
docs/_templates/: macros.rst
hooks/: pyinstaller.py
scripts/: generate_manpage  update_juju_schema
src/jockey/: __args__.py  __init__.py  __main__.py  abstractions.py  cache.py  caching.py  cloud.py  core.py  filters.py  help.py  info.md  juju.py  log.py  objects.py  status_keeper.py
src/jockey/juju_schema/: full_status.py
tests/: k8s-core-juju-status.json  test_abstractions.py  test_cache.py  test_cli.py  test_filters.py  test_getters.py  test_object_types.py  test_objects.py  util.py
tests/samples/: juju-status-empty-applications.json  k8s-core-juju-status.json
