[project]
requires-python = ">=3.10"

[tool.poetry]
name = "jockey"
version = "0.2.1"
description = "A CLI tool designed to facilitate quick and easy retrieval of Juju objects using filters."
readme = "README.md"
authors = [
    "Connor Chamberlain <connor.chamberlain@canonical.com>",
    "Pedro Castillo <pedro.castillo@canonical.com>"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",
]

packages = [
    { include = "jockey", from = "src" }
]

[tool.poetry.scripts]
juju-jockey = "jockey.__main__:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
click = "^8.1.7"
fabric = "^3.2.2"
invoke = "^2.2.0"
orjson = "^3.10.7"
xdgenvpy = "^3.0.0"
python-slugify = "^8.0.4"
rich-argparse = "^1.5.2"
regex = "^2024.9.11"
dotty-dictionary = "^1.2.0"
types-xdgenvpy = "^3.0.0.20240918"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^24.10.0"
mypy = "^1.11"
flake8 = "^7.1.1"
Flake8-pyproject = "^1.2.3"
flake8-bugbear = "^24.8.19"
pytest = "^8.3.3"
coverage = "^7.6.3"
pytest-cov = "^5.0.0"
poetry-pyinstaller-plugin = "^1.2.0"
pdoc = "^14.7.0"
pytest-md-report = "^0.6.2"
sphinx = "<8"
canonical-sphinx-extensions = "^0.0.23"
default-values = "^0.6.0"
myst-parser = "^4.0.0"
canonical-sphinx = "^0.2.0"
sphinx-autodoc-typehints = "^2.3.0"
sphinx-autoapi = "^3.3.2"
types-paramiko = "^3.5.0.20240928"
types-regex = "^2024.9.11.20240912"
pytest-timeout = "^2.3.1"
commitizen = "^3.29.1"
argparse-manpage = "^4.6"

[tool.coverage.run]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
md_report = true
md_report_verbose = 0
md_report_color = "auto"
md_report_flavor = "gfm"
md_report_output = ".github-test-report.md"

[tool.black]
line-length = 120
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
    \.pytest_cache
  | \.git
  | \.mypy_cache
)
'''

[tool.isort]
profile = 'black'
line_length = 120
star_first = true
group_by_package = true
force_sort_within_sections = true
lines_after_imports = 2
honor_noqa = true
atomic = true
ignore_comments = false
skip_gitignore = true
src_paths = ['src', 'tests']

[tool.flake8]
max-line-length = 120
max-complexity = 18
count = true
show-source = true
statistics = true
disable-noqa = false
enable-extensions = [
    'G', # flake8-logging-format
]
extend-ignore = ["E203"]
extend-exclude = [
    '.github',
    '.Python',
    '.*.pyc',
    '.*.pyo',
    '.*.pyd',
    '.*.py.class',
    '*.egg-info',
    'venv*',
    '.venv*',
    '.*_cache',
    'lib',
    'lib64',
    '.*.so',
    'build',
    'dist',
    'sdist',
    'wheels',
]

[tool.poetry-pyinstaller-plugin]
version = "6.7.0"

# disable compression
disable-upx = true

[tool.poetry-pyinstaller-plugin.scripts]
juju-jockey = { source = "src/jockey/__main__.py", type = "onefile", bundle = false }

[tool.commitizen]
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "src/jockey/__init__.py"
]
bump_message = "bump: $current_version -> $new_version [skip ci]"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
